# biometric_redis_to_postgres_pusher

./: .env  Cargo.toml  Dockerfile
src/: main.rs
src/db/: db_service.rs
src/handler/: handler_service.rs  mod.rs
src/logger/: mod.rs
src/models/: student.rs
src/redis/: redis_service.rs
