[package]
name = "cache_db_to_service"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
redis = {version="0.26.1",features=["tokio","aio","tokio-comp"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres"] }
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
fern = "0.6.2"
log = "0.4.22"